<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:foreground="?attr/selectableItemBackground"
    android:elevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="@dimen/imageview_margin_right"
            android:src="@drawable/image"/>

        <TextView
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:layout_margin="@dimen/textview_margin"
         android:id="@+id/title_text"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"
         android:maxLines="2"
         android:ellipsize="end"
         android:textColor="@color/colorPrimary"
         />

        <TextView
            android:textStyle="bold"
            android:layout_below="@+id/title_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/year"
            android:textColor="@color/rate_btn_normal"
            android:layout_margin="@dimen/textview_margin"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:textSize="14sp"
            android:id="@+id/year_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/title_text"
            android:layout_toRightOf="@+id/year_header"
            android:layout_toEndOf="@+id/year_header"
            android:layout_margin="@dimen/textview_margin"
            android:id="@+id/year_text"
            />

    <TextView
        android:textStyle="bold"
        android:layout_below="@+id/year_header"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/type"
        android:textColor="@color/rate_btn_normal"
        android:layout_margin="@dimen/textview_margin"
        android:textSize="14sp"
        android:id="@+id/type_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/year_header"
            android:layout_toRightOf="@+id/type_header"
            android:layout_toEndOf="@+id/type_header"
            android:layout_margin="@dimen/textview_margin"
            android:id="@+id/type_text"
            />




        <TextView
            android:textStyle="bold"
            android:layout_below="@+id/imageView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/rate_btn_normal"
            android:layout_margin="@dimen/textview_margin"
            android:textSize="14sp"
            android:id="@+id/genre_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/genre_header"
            android:layout_margin="@dimen/textview_margin"
            android:id="@+id/genre_text"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>
